faet: add s3 integration and make profile picture working
